# ma1sd-extender

./: .markdownlint.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  lint.yml
ma1sd_extender/: main.py  search.py
